add login and authorization pages

--- a/BlazorApp/Shared/MainLayout.razor
+++ b/BlazorApp/Shared/MainLayout.razor
@@ -9,6 +9,7 @@
 
     <main>
         <div class="top-row px-4">
+            <a href="/auth" target="_blank">Sign in</a>
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
