--- a/BlazorApp/Pages/Login.razor
+++ b/BlazorApp/Pages/Login.razor
@@ -5,7 +5,7 @@
 @inject IHttpClientFactory ClientFactory
 @using System.Text
 @using System.Text.Json
-@using Chat.Dtos
+@using Chat.Models
 @using Chat.Requests
 
 <PageTitle>Index</PageTitle>
