--- a/BlazorApp/Pages/Counter.razor
+++ b/BlazorApp/Pages/Counter.razor
@@ -1,13 +1,11 @@
 ﻿@page "/counter"
 @inject ILogger<Counter> logger
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Чат</PageTitle>
 
-<h1>Counter</h1>
-
-<p role="status">Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<div class="sidebar">
+    <NavMenu/>
+</div>
 
 @code {
     private int currentCount = 0;
