--- a/BlazorApp/Pages/Index.razor.css
+++ b/BlazorApp/Pages/Index.razor.css
@@ -29,3 +29,21 @@
     font-weight: bold;
     color: #1a1e21;
 }
+
+/*msg*/
+.chat-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50vh;
+    border: 1px solid black;
+    overflow: auto;
+}
+
+.receive{
+    align-self: flex-start;
+}
+
+.send{
+    align-self: flex-end;
+}
