--- a/BlazorApp/Pages/Login.razor
+++ b/BlazorApp/Pages/Login.razor
@@ -3,6 +3,7 @@
 @inherits LayoutComponentBase
 @using Microsoft.AspNetCore.Components
 @inject IHttpClientFactory ClientFactory
+@inject NavigationManager NavigationManager
 @using System.Text
 @using System.Text.Json
 @using Chat.Models
@@ -14,11 +15,11 @@
     <div className="container">
         <h1>Chack chat</h1>
 
-        <div className="form" >
+        <EditForm Model="@authUser" OnSubmit="SendLogin" className="form" >
             <input @bind-value="@authUser.UserName" type="text" placeholder="Username"/>
             <input @bind-value="@authUser.Password" type="password" placeholder="Password"/>
-            <button id="login-button" @onclick="SendLogin" >Вход</button>
-        </div>
+            <button id="login-button">Вход</button>
+        </EditForm>
         <p>@message</p>
     </div>
 </div>
@@ -33,12 +34,12 @@
         authUser.Email = "AAAA";
         message = "Выполняется проверка...";
         HttpClient httpClient = ClientFactory.CreateClient();
-        var serializeUser = JsonSerializer.Serialize(authUser);
-        var requestContent = new StringContent(serializeUser, Encoding.UTF8, "application/json");
-        var response = await httpClient.PostAsync("http://localhost:5174/auth/login", requestContent);
+        var response = await httpClient.PostAsJsonAsync("http://localhost:5174/auth/login", authUser);
         message = await response.Content.ReadAsStringAsync();
-        message = response.IsSuccessStatusCode ? "" : await response.Content.ReadAsStringAsync();
-    // redirect
+        if (response.IsSuccessStatusCode)
+            NavigationManager.NavigateTo("/");
+        else
+            message = await response.Content.ReadAsStringAsync();
     }
 
 }
