--- a/BlazorApp/Pages/Login.razor
+++ b/BlazorApp/Pages/Login.razor
@@ -1,13 +1,12 @@
-﻿@page "/login"
+@page "/login"
 
 @inherits LayoutComponentBase
 @using Microsoft.AspNetCore.Components
 @inject IHttpClientFactory ClientFactory
-@inject NavigationManager NavigationManager
-@using System.Text
-@using System.Text.Json
-@using Chat.Models
 @using Chat.Requests
+@using Chat.Services
+@inject NavigationManager navigationManager
+@inject CustomStateProvider authStateProvider
 
 <PageTitle>Index</PageTitle>
 
@@ -32,14 +31,41 @@
     async Task SendLogin()
     {
         authUser.Email = "AAAA";
-        message = "Выполняется проверка...";
-        HttpClient httpClient = ClientFactory.CreateClient();
-        var response = await httpClient.PostAsJsonAsync("http://localhost:5174/auth/login", authUser);
-        message = await response.Content.ReadAsStringAsync();
-        if (response.IsSuccessStatusCode)
-            NavigationManager.NavigateTo("/");
-        else
-            message = await response.Content.ReadAsStringAsync();
+    message = "Выполняется проверка...";
+
+        string error = null;
+        try
+        {
+            await authStateProvider.Login(authUser);
+            message = "Вы авторизованы!";
+            navigationManager.NavigateTo("");
+        }
+        catch (Exception ex)
+        {
+            message = ex.Message;
+        }
+
+    // redirect
     }
 
 }
+
+@*@code {
+    public HubConnection? hubConnection;
+    public string Data;
+    protected override async Task OnInitializedAsync()
+    {
+        hubConnection = new HubConnectionBuilder()
+            .WithUrl("http://localhost:5174/chathub")
+            .Build();     
+        
+        hubConnection.On<string>("ReceiveMessage", (data) =>
+        {
+            Data = data;           
+            InvokeAsync(StateHasChanged);      
+            
+        });
+
+        await hubConnection.StartAsync();
+    }
+}*@
