--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -1,6 +1,17 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using JsonSerializer = System.Text.Json.JsonSerializer
+@using System.Net
+@inject HttpClient HttpClient
+@inject IHttpContextAccessor httpContextAccessor
+@using System.Text
+@using System.Net
+@using BlazorApp1.Models
+@using BlazorApp1.Requests
+@using Chat.Services
+@inject AuthRequestService AuthRequestService
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorApp1</a>
+        <a class="navbar-brand" href="">Chack Chat</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -9,22 +20,24 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
+        @if (allChats is not null)
+        {
+            @foreach (var item in allChats)
+            {
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="@item.Id">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> @item.Title
+                    </NavLink>
+                </div>
+            }
+        }
     </nav>
+    <div class="nav-item px-3">
+        <EditForm Model="chatroom" OnSubmit="@createChatroom">
+            <input class="form-control" placeholder="Название чата" aria-placeholder="Добавить чат" @bind-value="@chatroom.Title"/>
+            <button class="btn btn-primary mt-3" type="submit">Добавить чат</button>
+        </EditForm>
+    </div>
 </div>
 
 @code {
@@ -37,4 +50,34 @@
         collapseNavMenu = !collapseNavMenu;
     }
 
+}
+
+@*Добавление чата*@
+@code
+{
+    public List<ChatroomModel> allChats;
+    CreateChatroom chatroom = new();
+    async Task createChatroom()
+    {
+        List<string> addedUsers = new List<string> { };
+        chatroom.UserNames = addedUsers;
+        
+        string url = "http://localhost:1977/chat";
+
+        var response = await AuthRequestService.MakeAuthorizedPost("http://localhost:1977/chat", chatroom);
+        if (response.IsSuccessStatusCode)
+            await FetchAllChats();
+    }
+    
+    async Task FetchAllChats()
+    {
+        var response = await AuthRequestService.MakeAuthorizedGet("http://localhost:1977/chat/all");
+        if (response.IsSuccessStatusCode)
+            allChats = await response.Content.ReadFromJsonAsync<List<ChatroomModel>>();
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await FetchAllChats();
+    }
 }
